Last minute changes
Co-Authored-By: CoolMysticIon <56503601+CoolMysticIon@users.noreply.github.com>
Co-Authored-By: Alex C <59523055+Alexc09@users.noreply.github.com>
Co-Authored-By: Chloe Low <72703739+chloryfish@users.noreply.github.com>

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -25,7 +25,7 @@
     <div class="container" id="main">
         <div id="login">
             <h1 class="title">Login to your Tourisit ID</h1>
-            <h3 class="subtitle">Welcome back! Ready to ride some tour guides?</h3>
+            <h3 class="subtitle">Welcome back!</h3>
             <div id="emailConfirmed" class="notification is-success" style="display: none;">
                 Your email has been verified.
             </div>
