--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -70,7 +70,12 @@
                     <div class="media-content">
                         <div class="content">
                             <p>
-                                <strong>Gordon Lansay</strong>
+                                <strong class="pr-5">Gordon Lansay</strong>
+                                <span class="fas fa-star checked"></span>
+                                <span class="fas fa-star checked"></span>
+                                <span class="fas fa-star checked"></span>
+                                <span class="fas fa-star"></span>
+                                <span class="fas fa-star"></span>
                                 <br>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                             </p>
