--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -27,8 +27,8 @@
         <div class="level">
             <div class="level-right">
                 <div class="level-item">
-                    <button type="button" class="button is-small">
-                        March 8, 2017 - April 6, 2017
+                    <button type="button" class="button is-success">
+                        <i class="fas fa-download"></i>&ensp;Download report for this month
                     </button>
                 </div>
             </div>
