updated front end

--- a/templates/setting.html
+++ b/templates/setting.html
@@ -16,8 +16,8 @@
         <div class="column is-one-quarter mt-6">
             <div class="section">
                 <div class="box is-centered">
-                    <button class="button">Account Info</button>
-                    <button class="button">Account Info</button>
+                    <p><button class="button">Account Info</button></p>
+                    <p><button class="button">Billing</button></p>
                 </div>
             </div>
 
