--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -37,7 +37,7 @@
                     <div class="control has-icons-left">
                         <input id="loginEmail" class="input" type="text" placeholder="Email">
                         <span class="icon is-small is-left">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-at"></i>
                         </span>
                     </div>
                 </div>
