--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -35,9 +35,17 @@
             <form id="signupForm">
                 <div class="field">
                     <div class="control has-icons-left has-icons-right">
-                        <input id="registerEmail" class="input" type="text" placeholder="Email">
+                        <input id="registerName" class="input" type="text" placeholder="Full Name">
                         <span class="icon is-small is-left">
                             <i class="fas fa-user"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control has-icons-left has-icons-right">
+                        <input id="registerEmail" class="input" type="text" placeholder="Email">
+                        <span class="icon is-small is-left">
+                            <i class="fas fa-at"></i>
                         </span>
                     </div>
                 </div>
