--- a/templates/billing.html
+++ b/templates/billing.html
@@ -15,10 +15,8 @@
         <!-- Side Profile Page -->
         <div class="column is-one-quarter mt-6">
             <div class="section">
-                <div class="box is-centered">
-                    <button class="button is-active">Account Info</button>
-                    <button class="button is-active">Billing</button>
-                </div>
+                <button class="button is-active is-fullwidth">Account Info</button>
+                <button class="button is-active">Billing</button>
             </div>
         </div>
 
