--- a/templates/setting.html
+++ b/templates/setting.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/profile.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
+    <link href="bulma-calendar/dist/css/bulma-calendar.min.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -25,20 +25,74 @@
                         </p>
                     </div>
                 </div>
-
             </div>
             <!-- Content -->
             <div class="column">
                 <div class="section">
                     <!-- Update account settings -->
                     <h1 class="is-size-4 has-text-left has-text-weight-bold">Account Info</h1>
-                    <p class="is-size-5">Username: Coolion</p>
-                    <p class="is-size-5">Password: **************</p>
-                    <p class="is-size-5">Phone Number: +65 **** 1234</p>
-                    <p class="is-size-5">Email Address: B******@gmail.com</p>
+
+                    <div class="field is-grouped is-grouped-centered is-align-items-center">
+                        <label class="control-label pr-3">Username:</label>
+                        <p class="control is-expanded">
+                            <input class="input" type="text" placeholder="Coolion">
+                        </p>
+                        <p class="control">
+                            <a class="button is-primary">
+                                Update
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="field is-grouped is-grouped-centered is-align-items-center">
+                        <label class="control-label pr-3">Password:</label>
+                        <p class="control is-expanded">
+                            <input class="input" type="text" placeholder="************">
+                        </p>
+                        <p class="control">
+                            <a class="button is-primary">
+                                Update
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="field is-grouped is-grouped-centered is-align-items-center">
+                        <label class="control-label pr-3">Phone Number:</label>
+                        <p class="control is-expanded">
+                            <input class="input" type="text" placeholder="+65 **** 1234">
+                        </p>
+                        <p class="control">
+                            <a class="button is-primary">
+                                Update
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="field is-grouped is-grouped-centered is-align-items-center">
+                        <label class="control-label pr-3">Email Address:</label>
+                        <p class="control is-expanded">
+                            <input class="input" type="text" placeholder="a******@gmail.com">
+                        </p>
+                        <p class="control">
+                            <a class="button is-primary">
+                                Update
+                            </a>
+                        </p>
+                    </div>
 
                     <!-- Update personal details -->
                     <h1 class="is-size-4 has-text-left has-text-weight-bold pt-3">Personal</h1>
+                    <div class="field is-grouped is-grouped-centered is-align-items-center">
+                        <label class="control-label pr-3">Birthday</label>
+                        <p class="control is-expanded">
+                            <input type="date">
+                        </p>
+                        <p class="control">
+                            <a class="button is-primary">
+                                Update
+                            </a>
+                        </p>
+                    </div>
                     <p class="is-size-5">Birthday</p>
                     <p class="is-size-5">Gender</p>
                     <p class="is-size-5">Language</p>
@@ -66,6 +120,28 @@
                 </div>
             </div>
         </div>
+        <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
+        <script>
+            // Initialize all input of date type.
+            const calendars = bulmaCalendar.attach('[type="date"]', options);
+
+            // Loop on each calendar initialized
+            calendars.forEach(calendar => {
+                // Add listener to select event
+                calendar.on('select', date => {
+                    console.log(date);
+                });
+            });
+
+            // To access to bulmaCalendar instance of an element
+            const element = document.querySelector('#my-element');
+            if (element) {
+                // bulmaCalendar instance is available as element.bulmaCalendar
+                element.bulmaCalendar.on('select', datepicker => {
+                    console.log(datepicker.data.value());
+                });
+            }
+        </script>
     </div>
 
 {% endblock %}
