--- a/templates/setting.html
+++ b/templates/setting.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/css/shop.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/profile.css">
-    <link href="bulma-calendar/dist/css/bulma-calendar.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/bulma-calendar.min.css">
 {% endblock %}
 
 
@@ -82,6 +82,7 @@
 
                     <!-- Update personal details -->
                     <h1 class="is-size-4 has-text-left has-text-weight-bold pt-3">Personal</h1>
+                    <input class="input" type="date">
                     <div class="field is-grouped is-grouped-centered is-align-items-center">
                         <label class="control-label pr-3">Birthday</label>
                         <p class="control is-expanded">
@@ -120,28 +121,28 @@
                 </div>
             </div>
         </div>
-        <script src="~bulma-calendar/dist/js/bulma-calendar.min.js"></script>
-        <script>
-            // Initialize all input of date type.
-            const calendars = bulmaCalendar.attach('[type="date"]', options);
 
-            // Loop on each calendar initialized
-            calendars.forEach(calendar => {
-                // Add listener to select event
-                calendar.on('select', date => {
-                    console.log(date);
-                });
-            });
-
-            // To access to bulmaCalendar instance of an element
-            const element = document.querySelector('#my-element');
-            if (element) {
-                // bulmaCalendar instance is available as element.bulmaCalendar
-                element.bulmaCalendar.on('select', datepicker => {
-                    console.log(datepicker.data.value());
-                });
-            }
-        </script>
     </div>
+    <script src="/js/bulma-calendar.js"></script>
+    <script>
+        // Initialize all input of type date
+        var calendars = bulmaCalendar.attach('[type="date"]', options);
 
+        // Loop on each calendar initialized
+        for (var i = 0; i < calendars.length; i++) {
+            // Add listener to date:selected event
+            calendars[i].on('select', date => {
+                console.log(date);
+            });
+        }
+
+        // To access to bulmaCalendar instance of an element
+        var element = document.querySelector('#my-element');
+        if (element) {
+            // bulmaCalendar instance is available as element.bulmaCalendar
+            element.bulmaCalendar.on('select', function (datepicker) {
+                console.log(datepicker.data.value());
+            });
+        }
+    </script>
 {% endblock %}
