--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,88 +1,163 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
 {% block scripts %}
-<!--<link rel="stylesheet" href="css/chat.css">-->
-{% endblock %}
-
-
+<link rel="stylesheet" href="/css/chat.css" />
+<link rel="stylesheet" href="/css/shop.css" />
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+{% endblock %} 
 
 {% block content %}
-<!--WIP-->
-<!--HEADER-->
-<section class="section has-background-primary-dark has-text-white pb-0">
-    <div class="container p-5">
-    <a href="{{url_for('bookings')}}" class="button is-success is-light is-size-6">
-        <i class="fas fa-chevron-left"></i>&ensp;Bishan Nightlife</a>
-        <br>
-    <div class="listing-author mt-2">
-        <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-        <div class="ml-2 is-size-3"><b>HidethePain</b></div>
-    </div>
-</div>
+<!--Start: CHAD HEADER-->
+<section class="section has-background-primary-dark pb-0" id="chat-hero">
+  <div class="container p-5">
+    <h1 class="title is-size-1 has-text-weight-bold has-text-white">Inbox</h1>
+  </div>
 </section>
-<!--End: header-->
+<!--End: CHAD HEADER-->
 
-
+<!--Main-->
 <section class="section">
-    <div class="container chat-main">
-        <div class="box">
-            <!--START: Messages-->
-            <div style="height:340px;">
-
-                <div class="box has-background-info-light ml-6 py-4">
-                    <article class="media">
-                      <div class="media-content">
-                        <div class="content is-pulled-right">
-                          <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                          </p>
-                        </div>
-                      </div>
-                      <div class="media-right">
-                        <figure>
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                        </figure>
-                      </div>
-                    </article>
-                  </div>
-
-                <div class="box has-background-success-light mr-6 py-4">
-                    <article class="media">
-                      <div class="media-left">
-                        <figure>
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                        </figure>
-                      </div>
-                      <div class="media-content">
-                        <div class="content">
-                          <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
-                          </p>
-                        </div>
-                      </div>
-                    </article>
-                  </div>
-
-
+  <div class="container">
+    <div class="columns is-7">
+      <!--Start: Menu Column -->
+      <div class="column is-one-third">
+        <aside class="menu">
+          <!--Start: Dropdown-->
+          <div class="dropdown is-hoverable">
+            <div class="dropdown-trigger">
+              <button
+                class="button"
+                aria-haspopup="true"
+                aria-controls="dropdown-menu4"
+              >
+                <span>All</span>
+                <span class="icon is-small">
+                  <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+              </button>
             </div>
-            <!--END: Messages-->
+            <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+              <div class="dropdown-content">
+                <a class="dropdown-item is-active"> All </a>
+                <a class="dropdown-item"> Booking Chats </a>
+                <a class="dropdown-item"> Archived </a>
+              </div>
+            </div>
+          </div>
+          <!--End: Dropdown-->
 
-            <!--START: Input field-->
-            <div class="field has-addons">
-              <div class="control">
+          <!--Start: Chat Thumbnails-->
+          <ul class="menu-list">
+            <!-- START: Horizontal Card -->
+            <li>
+              <div class="box mt-4 has-background-primary-light">
+                <a>
+                  <div class="p-2 listing-author">
+                    <div
+                      class="profile-img"
+                      style="background-image: url('/pfp.jpg')"
+                    ></div>
+                    <div class="ml-2"><b>HideThePain69</b></div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <!-- END: Horizontal Card -->
+
+            <!-- START: Horizontal Card -->
+            <li>
+              <div class="box mt-4">
+                <a>
+                  <div class="p-2 listing-author">
+                    <div
+                      class="profile-img"
+                      style="background-image: url('/pfp.jpg')"
+                    ></div>
+                    <div class="ml-2"><b>HideThePain69</b></div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <!-- END: Horizontal Card -->
+          </ul>
+          <!--End: Chat Thumbnails-->
+        </aside>
+      </div>
+      <!--End: Menu Column-->
+
+      <!--Start: Console Column-->
+      <div class="column">
+        <section class="section">
+          <div class="container chat-main">
+            <div class="box">
+              <!--START: Messages-->
+              <!--Experimental (monke brain)-->
+<div class="jumbotron m-0 p-0 bg-transparent">
+  <div class="row m-0 p-0 position-relative">
+    <div class="col-12 p-0 m-0 position-absolute" style="right: 0px;">
+    <div class="card border-0 rounded" style="box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10), 0 6px 10px 0 rgba(0, 0, 0, 0.01); overflow: hidden; height: 50vh;">
+
+      <div class="card-header p-1 bg-light border border-top-0 border-left-0 border-right-0" style="color: rgba(96, 125, 139,1.0);">
+      <div class="profile-img" style="background-image: url('/pfp.jpg')"></div>
+      <h6 class="float-left" style="margin: 0px; margin-left: 10px;"> HideThePain69 </h6>
+      </div>
+    
+      <div class="card border-0 m-0 p-0" style="height: 100vh;">
+      <div id="sohbet" class="card border-0 m-0 p-0 position-relative bg-transparent" style="overflow-y: auto; height: 50vh;">
+    
+      <div class="balon1 p-2 m-0 position-relative">
+        <div class="float-left"> Hey there! What's up? </div>
+      </div>
+      
+      <div class="balon2 p-2 m-0 position-relative">
+        <div class="float-right"> Hey there! What's up? </div>
+      </div>
+
+      <div class="balon1 p-2 m-0 position-relative">
+        <div class="float-left"> Hey there! What's up? </div>
+      </div>
+
+      <div class="balon2 p-2 m-0 position-relative">
+        <div class="float-right"> Hey there! What's up? </div>
+      </div>
+
+      </div>
+      </div>
+
+    </div>
+    </div>
+    
+  </div>
+  </div>
+<!--End experimental-->
+              <!--END: Messages-->
+
+              <!--START: Input field-->
+              <div class="field has-addons">
+                <div class="control">
                   <!--Dropup-->
                   <div class="dropdown post-options is-hoverable is-up">
                     <div class="dropdown-trigger">
-                      <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-post">
+                      <button
+                        class="button"
+                        aria-haspopup="true"
+                        aria-controls="dropdown-menu-post"
+                      >
                         <span class="icon is-small">
                           <i class="fas fa-paperclip"></i>
                         </span>
                       </button>
                     </div>
-                    <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
+                    <div
+                      class="dropdown-menu"
+                      id="dropdown-menu-post"
+                      role="menu"
+                    >
                       <div class="dropdown-content">
                         <a class="dropdown-item">
-                          <i class="fas fa-photo-video"></i>&ensp;Photos & Videos
+                          <i class="fas fa-photo-video"></i>&ensp;Photos &
+                          Videos
                         </a>
                         <a class="dropdown-item">
                           <i class="fas fa-file"></i>&ensp;Documents
@@ -91,20 +166,29 @@
                     </div>
                   </div>
                   <!--END: Dropup-->
-              </div>
-              <div class="control is-expanded">
-                  <input class="input is-fullwidth" type="text" placeholder="Enter your message..">
-              </div>
-              <div class="control">
+                </div>
+                <div class="control is-expanded">
+                  <input
+                    class="input is-fullwidth"
+                    type="text"
+                    placeholder="Enter your message.."
+                  />
+                </div>
+                <div class="control">
                   <button class="button is-primary">
                     <i class="fas fa-paper-plane"></i>
                   </button>
+                </div>
               </div>
+              <!--END: Input Field-->
+            </div>
           </div>
-            <!--END: Input Field-->
-        </div>
+        </section>
+      </div>
+      <!--End: Console Column-->
     </div>
+  </div>
 </section>
 
-{% endblock %}
 
+{% endblock %}
