updated the shop stuff

--- a/templates/tourGuides/editListing.html
+++ b/templates/tourGuides/editListing.html
@@ -1,7 +1,6 @@
 {% extends 'baseTour.html' %}
 
 {% block scripts %}
-
 {% endblock %}
 
 
@@ -25,15 +24,21 @@
     <div class='columns is-centered'>
         <div class='column is-half'>
             <div class='box'>
-                <form class="form-horizontal" enctype="multipart/form-data" action="/listings/edit/{{ listing.tour_id }}" method="POST">
+                <form class="form-horizontal" enctype="multipart/form-data" action="/listings/edit/{{ listing['_id'] }}" method="POST">
+                    {{ form.csrf_token }}
                     <fieldset>
-                    
-                        <legend class='label'>Tour Title</legend>
-                        
+
+                        <legend class='label'>Tour Name</legend>
+
                         <div class="field">
-                        <label class="label" for="tour-title"></label>
+                        <label class="label" for="tour-name"></label>
                         <div class="control">
-                            <input id="tour-title" name="tour-title" type="text" class="input " required="" value='{{ listing.tour_name }}'>      
+                            {{ form.tour_name(id="tour-name", type="text", class="input", placeholder="Bishan Eco-walk", value=listing.tour_name) }}
+                            <ul>
+                                {% for error in form.tour_name.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
                         </div>
                         </div>
 
@@ -42,15 +47,20 @@
                         <div class="field">
                         <label class="label" for="tour-brief"></label>
                         <div class="control">
-                            <input id="tour-brief" name="tour-brief" type="text" class="input " required="" value='{{ listing.tour_brief }}'>      
+                            {{ form.tour_brief(id="tour-brief", type="text", class="input", placeholder="Explore the Nature aspects of Bishan", value=listing.tour_brief ) }}
+                             <ul>
+                                {% for error in form.tour_brief.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
                         </div>
                         </div>
-                        
-                        
+
+
                         <label class="label" for="tour-img">Tour Image</label>
                         <div class="file">
                         <label class="file-label">
-                            <input class="file-input" value='{{ listing.tour_img }}' type="file" name="tour-img" onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;">
+                            {{ form.tour_img(class="file-input", type="file", onchange="if (this.files.length > 0) document.getElementById('filename-tour-img').innerHTML = this.files[0].name;", value=listing.tour_img ) }}
                             <span class="file-cta">
                             <span class="file-icon">
                                 <i class="fa fa-upload"></i>
@@ -59,26 +69,40 @@
                                 Choose a file…
                             </span>
                             </span>
+                             <ul>
+                                {% for error in form.tour_img.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
                         </label>
                         </div>
-                
+
                         <div class="field">
                         <label class="label" for="tour-desc">Tour Description</label>
-                        <div class="control">                     
-                            <textarea class="textarea" id="tour-desc" name="tour-desc">{{ listing.tour_desc }}</textarea>
+                        <div class="control">
+                            {{ form.tour_desc(class='textarea', id="tour-desc") }}
+                             <ul>
+                                {% for error in form.tour_desc.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
                         </div>
                         </div>
-                        
-                
+
+
                         <div class="field">
                         <label class="label" for="tour-price">Minimum Price ($SGD)</label>
                         <div class="control">
-                            <input id="tour-price" name="tour-price" type="number" class="input" value='{{ listing.tour_price }}'>
-                            
+                            {{ form.tour_price(id="tour-price", type="number", class="input", placeholder="120", value=listing.tour_price ) }}
+                            <ul>
+                                {% for error in form.tour_price.errors %}
+                                <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
                         </div>
                         </div>
-                        
-                
+
+
                         <div class="field">
                         <label class="label" for="tour-submit"></label>
                         <div class="control">
@@ -92,4 +116,6 @@
         </div>
     </div>
 </section>
+
+
 {% endblock %}
