made edits for photos

--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ item.tour_img }}');"></div>
                     </div>
                 </div>
             </div>
