--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -86,7 +86,7 @@
                 <!-- START: Vertical Card -->
                 <a href='/discover/{{ item["_id"] }}'>
                     <div class='p-5 vertical'>
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}') ;"></div>
                         <div class="ml-4">
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
