--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -30,7 +30,7 @@
 
                     </div>
                     <div class="column">
-                        <div class="box listing-img" style="background-image: url('/places/bishan.jpg');"></div>
+                        <div class="box listing-img" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}');"></div>
                     </div>
 
                 </div>
