--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -77,6 +77,9 @@
                                 {% endfor %}
                             </ul>
                         </label>
+                            <div>
+                                <img src="data:image/png;base64, {{ imgBase64 }}" />
+                            </div>
                         </div>
 
                         <div class="field">
